RESOLVED FIXED36720
Web Inspector: Toggling style properties on/off does not always work.
https://bugs.webkit.org/show_bug.cgi?id=36720
Summary Web Inspector: Toggling style properties on/off does not always work.
Pavel Feldman
Reported 2010-03-28 04:57:09 PDT
Re-using dangling CSSStyleDeclaration as a storage for disables style properties turned out to be a bad idea. Styles with urls (such as content: url(...) ) are not parsed well unless there is an associated stylesheet. This patch fixes it.
Attachments
[PATCH] Proposed fix. (8.16 KB, patch)
2010-03-28 05:00 PDT, Pavel Feldman
no flags
Pavel Feldman
Comment 1 2010-03-28 05:00:00 PDT
Created attachment 51858 [details] [PATCH] Proposed fix.
Pavel Feldman
Comment 2 2010-03-28 10:41:38 PDT
Committing to http://svn.webkit.org/repository/webkit/trunk ... M WebCore/ChangeLog M WebCore/inspector/InspectorController.cpp M WebCore/inspector/InspectorDOMAgent.cpp M WebCore/inspector/InspectorDOMAgent.h M WebCore/inspector/front-end/DOMAgent.js M WebCore/inspector/front-end/StylesSidebarPane.js Committed r56697
Pavel Feldman
Comment 3 2010-03-28 10:49:31 PDT
Comment on attachment 51858 [details] [PATCH] Proposed fix. Landed manually.
Note You need to log in before you can comment on or make changes to this bug.