2010-03-28  Pavel Feldman  <pfeldman@chromium.org>

Reviewed by Timothy Hatcher.

        Web Inspector: Toggling style properties on/off does not always work.

        https://bugs.webkit.org/show_bug.cgi?id=36720

        * inspector/InspectorController.cpp:
        * inspector/InspectorDOMAgent.cpp:
        (WebCore::InspectorDOMAgent::toggleStyleEnabled):
        (WebCore::InspectorDOMAgent::buildObjectForStyle):
        (WebCore::InspectorDOMAgent::buildArrayForDisabledStyleProperties):
        * inspector/InspectorDOMAgent.h:
        * inspector/front-end/DOMAgent.js:
        (WebInspector.CSSStyleDeclaration):


Canonical link: https://commits.webkit.org/47991@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56697 268f45cc-cd09-0410-ab3c-d52691b4dbfc