WebCore/inspector/InspectorDOMAgent.h
@@ -126,7 +126,10 @@ namespace WebCore {
         long pushNodePathToFrontend(Node* node);
         void pushChildNodesToFrontend(long nodeId);
 
-   private:
+    private:
+        typedef std::pair<String, String> PropertyValueAndPriority;
+        typedef HashMap<String, PropertyValueAndPriority> DisabledStyleDeclaration;
+
         void startListening(Document* document);
         void stopListening(Document* document);
 
@@ -164,6 +167,7 @@ namespace WebCore {
         long bindRule(CSSStyleRule*);
         ScriptObject buildObjectForStyle(CSSStyleDeclaration*, bool bind);
         void populateObjectWithStyleProperties(CSSStyleDeclaration*, ScriptObject& result);
+        ScriptArray buildArrayForDisabledStyleProperties(DisabledStyleDeclaration&);
         ScriptObject buildObjectForRule(CSSStyleRule*);
         ScriptObject buildObjectForStyleSheet(CSSStyleSheet*);
         Vector<String> longhandProperties(CSSStyleDeclaration*, const String& shorthandProperty);
@@ -191,7 +195,8 @@ namespace WebCore {
         typedef HashMap<long, RefPtr<CSSStyleRule> > IdToRuleMap;
         RuleToIdMap m_ruleToId;
         IdToRuleMap m_idToRule;
-        IdToStyleMap m_idToDisabledStyle;
+        typedef HashMap<long, DisabledStyleDeclaration>  IdToDisabledStyleMap;
+        IdToDisabledStyleMap m_idToDisabledStyle;
         RefPtr<CSSStyleSheet> m_inspectorStyleSheet;
 
         long m_lastStyleId;
